--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="navbar-header">
-                            <a href="/"><h3>True Journalism Blog</h3></a>
+                            <a href="/"><h3>Udacity Multi User Blog</h3></a>
                         </div>
                         <ul class="nav navbar-nav navbar-right">
                             {% if not user %}
