--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -5,7 +5,7 @@
         <a href='/post/{{blog.key().id()}}' style="color:#666666;">
             <h2 class="post-title">{{blog.subject}}</h2>
         </a>
-        <small class="post-meta">Posted by {{blog.user.name}} on {{blog.created.strftime("%b %d, %Y")}}</small>
+        <small class="post-meta">Posted by {{blog.user.name}} on {{blog.created.strftime("%b %d, %Y %I:%M	%p ")}}</small>
         <p class="content">{{blog.content | safe}}</p>
     </div>
     <hr>
